# Humours

client/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
client/app/: build.gradle.kts  proguard-rules.pro
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/humours/client/: HumoursApplication.kt  MainActivity.kt
client/app/src/main/java/com/humours/client/builtin/: CubeTetrahedronPlugin.kt
client/app/src/main/java/com/humours/client/data/local/: SettingsStore.kt
client/app/src/main/java/com/humours/client/data/model/: Protocol.kt
client/app/src/main/java/com/humours/client/data/network/: ConnectionManager.kt  ConnectionState.kt  TlsBypass.kt
client/app/src/main/java/com/humours/client/data/repository/: MetricRepository.kt
client/app/src/main/java/com/humours/client/plugin/: PluginInstanceManager.kt  PluginLoader.kt  WidgetPlugin.kt
client/app/src/main/java/com/humours/client/plugin/gl/: EglCore.kt  GLThread.kt  GLUtils.kt
client/app/src/main/java/com/humours/client/plugin/surface/: SurfaceManager.kt
client/app/src/main/java/com/humours/client/ui/: AboutScreen.kt  ConnectionScreen.kt  ConnectionViewModel.kt  GridScreen.kt  NavGraph.kt  SettingsScreen.kt
client/app/src/main/res/values/: themes.xml
server/: Cargo.toml  config.toml
server/examples/: subscribe_new_metrics.json
server/patches/hardware-query/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
server/patches/hardware-query/src/: arm.rs  battery.rs  builder.rs  cpu.rs  error.rs  fpga.rs  gpu.rs  hardware_info.rs  lib.rs  memory.rs  monitoring.rs  network.rs  npu.rs  pci.rs  power.rs  presets.rs  simple.rs  storage.rs  thermal.rs  tpu.rs  usb.rs  virtualization.rs
server/patches/hardware-query/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
server/src/: config.rs  hardware.rs  lib.rs  main.rs  protocol.rs  server.rs
server/tests/: fast_client.rs  websocket_test.rs
