[package]
name = "humours-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
axum-server = "0.8.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.39.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures-util = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.29.0"
