[package]
name = "humours-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "humours_server"
path = "src/lib.rs"

[[bin]]
name = "humours-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = "0.21"
rustls-pemfile = "2"
anyhow = "1"
rcgen = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
futures-util = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.24"
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
