[package]
name = "humours-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "GPL-3.0-only"

[lib]
name = "humours_server"
path = "src/lib.rs"

[[bin]]
name = "humours-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.39.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls-pemfile = "2"
anyhow = "1"
dirs = "6.0.0"
rcgen = "0.14.8"
futures-util = "0.3"
default-net = "0.22"
route_manager = "0.2"
battery = "0.7.8"
all-smi = { version = "0.22.0", default-features = false }

[dev-dependencies]
tokio-tungstenite = "0.29.0"
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }

[patch.crates-io]
all-smi = { path = "../vendor/all-smi" }
